--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "guitar-harmonics",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@next/font": "14.0.0",
-    "@types/node": "20.8.9",
-    "@types/react": "18.2.33",
-    "@types/react-dom": "18.2.14",
-    "eslint": "8.52.0",
-    "eslint-config-next": "14.0.0",
-    "next": "14.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.2.2"
-  },
-  "devDependencies": {
-    "ts-node": "^10.9.1"
-  }
+    "name": "guitar-harmonics",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@next/font": "14.0.0",
+        "@types/node": "20.8.9",
+        "@types/react": "18.2.33",
+        "@types/react-dom": "18.2.14",
+        "classnames": "^2.5.1",
+        "eslint": "8.52.0",
+        "eslint-config-next": "14.0.0",
+        "next": "14.0.0",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "typescript": "5.2.2"
+    },
+    "devDependencies": {
+        "prettier": "^3.4.2",
+        "ts-node": "^10.9.1"
+    }
 }
